# vestige

./: CMakeLists.txt  TODO
src/: .dir-locals.el  BlockManager.cpp  BlockManager.h  CMakeLists.txt  Debug.c  EBlock.cpp  EBlock.h  EBlock.hpp  EContainer.cpp  EContainer.h  EContainer.hpp  EFactory.cpp  EFactory.h  EFactory.hpp  EIncludes.h  EIncludes.hpp  ELabel.cpp  ELabel.h  ELabel.hpp  EList.cpp  EList.h  EList.hpp  EMarker.cpp  EMarker.h  EMarker.hpp  EMarkerBlock.cpp  EMarkerBlock.hpp  EMarkerContainer.cpp  EMarkerContainer.hpp  EMarkerList.cpp  EMarkerList.hpp  ENode.hpp  ENodeBlock.hpp  ENodeList.cpp  EState.cpp  EStateManager.cpp  EStateManager.hpp  EVectorTypes.hpp  Includes.hpp  Initializer.cpp  (+7 more)
src/action/: Action.cpp  Action.hpp  ActionSet.cpp  ActionSet.hpp  Actions.hpp  Create.cpp  Create.hpp  Detect.cpp  Detect.hpp  Discard.cpp  Discard.hpp  Invalid.cpp  Invalid.hpp  Logic.cpp  Logic.hpp  Pop.cpp  Pop.hpp  PopPush.cpp  PopPush.hpp  Push.cpp  Push.hpp  Types.hpp
src/core/: Debug.hpp  DrawHelper.cpp  DrawHelper.hpp  GlobalStorage.cpp  GlobalStorage.hpp  Initializer.cpp  Initializer.hpp  Parameters.cpp  Parameters.hpp  Supervisor.cpp  Supervisor.hpp
src/draw/: Label.cpp  Label.hpp  Rectangle.cpp  Rectangle.hpp  Text.cpp  Text.hpp  ToolTip.cpp  ToolTip.hpp
src/lib/: boost.hpp  osg.hpp  osgart.hpp
src/marker/: Base.cpp  Base.hpp  Block.cpp  Block.hpp  GlobalMarkers.cpp  GlobalMarkers.hpp  Item.cpp  Item.hpp  List.cpp  List.hpp  Manager.cpp  Manager.hpp  Marker.cpp  Marker.hpp  MarkerSet.cpp  MarkerSet.hpp  Output.cpp  Output.hpp  Return.cpp  Return.hpp  Switch.cpp  Switch.hpp  Types.hpp  Var.cpp  Var.hpp
src/problem/: Compress.cpp  Compress.hpp  InsertionSort.cpp  InsertionSort.hpp  Join.cpp  Join.hpp  ListProblem.cpp  ListProblem.hpp  ListReturn.cpp  ListReturn.hpp  PDebug.cpp  PDebug.hpp  Problem.cpp  Problem.hpp  RemoveAll.cpp  RemoveAll.hpp  RemoveFirst.cpp  RemoveFirst.hpp  Reverse.cpp  Reverse.hpp  Types.hpp  Variables.cpp  Variables.hpp
src/recursion/: StatusMessage.cpp  StatusMessage.hpp  Step.cpp  Step.hpp  Variable.cpp  Variable.hpp  VariableSet.cpp  VariableSet.hpp
src/rule/: Create.cpp  Create.hpp  Discard.cpp  Discard.hpp  Move.cpp  Move.hpp  Names.cpp  Names.hpp  Pop.cpp  Pop.hpp  PopPush.cpp  PopPush.hpp  Push.cpp  Push.hpp  Rule.cpp  Rule.hpp  RuleSet.cpp  RuleSet.hpp  Rules.hpp  Types.hpp
src/state/: Block.cpp  Block.hpp  Capture.cpp  Capture.hpp  GlobalStates.cpp  GlobalStates.hpp  Item.cpp  Item.hpp  List.cpp  List.hpp  Manager.cpp  Manager.hpp  Node.cpp  Node.hpp  NodeSet.cpp  NodeSet.hpp  State.cpp  State.hpp  Supervisor.cpp  Supervisor.hpp  Types.hpp
test/: run
tests/: CMakeLists.txt
tests/class/: CMakeLists.txt  class_test.cpp
tests/foreach/: CMakeLists.txt  foreach_test.cpp
tests/list/: CMakeLists.txt  list_test.cpp
tests/osggeometry/: CMakeLists.txt
tests/osghud/: CMakeLists.txt  osghud.cpp
tests/osgtext3d/: CMakeLists.txt
(+103 files in other folders)
